omega_calc/obj/y.output
Nieużywane symbole terminalne w gramatyce

    ST
    LEQ
    GEQ
    NEQ
    ITERATIONS
    PARSE_EXPRESSION
    PARSE_FORMULA
    PARSE_RELATION
    p2
    p3
    p4
    p5
    p6
    p7


Stan 252 konflikty: 2 redukcja/redukcja


Gramatyka

    0 $accept: start $end

    1 $@1: ε

    2 start: $@1 inputSequence

    3 inputSequence: inputItem

    4 $@2: ε

    5 inputSequence: inputSequence $@2 inputItem

    6 inputItem: error ';'
    7          | SYMBOLIC globVarList ';'
    8          | VAR IS_ASSIGNED relation ';'
    9          | relation ';'
   10          | TIME relation ';'
   11          | TIMECLOSURE relation ';'
   12          | relation SUBSET relation ';'
   13          | CODEGEN effort relPairList context ';'
   14          | TCODEGEN effort statementInfoResult context ';'
   15          | SPMD blockAndProcsAndEffort relTripList ';'
   16          | reachable ';'

   17 relTripList: relTripList ',' relation ':' relation ':' relation
   18            | relation ':' relation ':' relation

   19 blockAndProcsAndEffort: ε
   20                       | INT
   21                       | INT INT
   22                       | INT INT INT

   23 effort: ε
   24       | INT
   25       | '-' INT

   26 context: ε
   27        | GIVEN relation

   28 relPairList: relPairList ',' relation ':' relation
   29            | relPairList ',' relation
   30            | relation ':' relation
   31            | relation

   32 statementInfoResult: statementInfoList
   33                    | TRANS_IS relation statementInfoResult
   34                    | SET_MMAP INT partialwrites statementInfoResult
   35                    | UNROLL_IS INT INT INT statementInfoResult
   36                    | PEEL_IS INT INT relation statementInfoResult
   37                    | PEEL_IS INT INT relation ',' relation statementInfoResult

   38 statementInfoList: statementInfo
   39                  | statementInfoList ',' statementInfo

   40 statementInfo: '[' STRING ',' relation ',' partialwrites ',' reads ']'
   41              | '[' STRING ',' relation ',' partialwrites ']'

   42 partialwrites: partialwrites ',' partialwrite
   43              | partialwrite

   44 partialwrite: STRING '[' relation ']' ',' relation
   45             | STRING ',' relation

   46 reads: reads ',' oneread
   47      | oneread

   48 oneread: '[' partials ']'

   49 partials: partials ',' partial
   50         | partial

   51 partial: INT ',' relation

   52 globVarList: globVarList ',' globVar
   53            | globVar

   54 globVar: VAR '(' INT ')'
   55        | VAR

   56 $@3: ε

   57 relation: OPEN_BRACE $@3 builtRelation CLOSE_BRACE
   58         | VAR
   59         | '(' relation ')'
   60         | relation '+'
   61         | relation '*'
   62         | relation '+' WITHIN relation
   63         | MINIMIZE_RANGE relation
   64         | MAXIMIZE_RANGE relation
   65         | MINIMIZE_DOMAIN relation
   66         | MAXIMIZE_DOMAIN relation
   67         | MAXIMIZE relation
   68         | MINIMIZE relation
   69         | FARKAS relation
   70         | DECOUPLED_FARKAS relation
   71         | relation '@'
   72         | PROJECT_AWAY_SYMBOLS relation
   73         | PROJECT_ON_SYMBOLS relation
   74         | DIFFERENCE relation
   75         | DIFFERENCE_TO_RELATION relation
   76         | OMEGA_DOMAIN relation
   77         | VENN relation
   78         | VENN relation GIVEN relation
   79         | CONVEX_HULL relation
   80         | POSITIVE_COMBINATION relation
   81         | CONVEX_COMBINATION relation
   82         | PAIRWISE_CHECK relation
   83         | CONVEX_CHECK relation
   84         | AFFINE_HULL relation
   85         | CONIC_HULL relation
   86         | LINEAR_HULL relation
   87         | HULL relation
   88         | HULL relation GIVEN relation
   89         | APPROX relation
   90         | RANGE relation
   91         | INVERSE relation
   92         | COMPLEMENT relation
   93         | GIST relation GIVEN relation
   94         | relation '(' relation ')'
   95         | relation COMPOSE relation
   96         | relation CARRIED_BY INT
   97         | relation JOIN relation
   98         | relation RESTRICT_RANGE relation
   99         | relation RESTRICT_DOMAIN relation
  100         | relation INTERSECTION relation
  101         | relation '-' relation
  102         | relation UNION relation
  103         | relation '*' relation
  104         | SUPERSETOF relation
  105         | SUBSETOF relation
  106         | MAKE_UPPER_BOUND relation
  107         | MAKE_LOWER_BOUND relation
  108         | SAMPLE relation
  109         | SYM_SAMPLE relation
  110         | reachable_of
  111         | ASSERT_UNSAT relation

  112 $@4: ε

  113 $@5: ε

  114 builtRelation: tupleDeclaration GOES_TO $@4 tupleDeclaration $@5 optionalFormula
  115              | tupleDeclaration optionalFormula
  116              | formula

  117 optionalFormula: formula_sep formula
  118                | ε

  119 formula_sep: ':'
  120            | VERTICAL_BAR
  121            | SUCH_THAT

  122 $@6: ε

  123 tupleDeclaration: $@6 '[' optionalTupleVarList ']'

  124 optionalTupleVarList: tupleVar
  125                     | optionalTupleVarList ',' tupleVar
  126                     | ε

  127 tupleVar: VAR
  128         | '*'
  129         | exp
  130         | exp ':' exp
  131         | exp ':' exp ':' INT

  132 varList: varList ',' VAR
  133        | VAR

  134 varDecl: varList

  135 varDeclOptBrackets: varDecl
  136                   | '[' varDecl ']'

  137 formula: formula AND formula
  138        | formula OR formula
  139        | constraintChain
  140        | '(' formula ')'
  141        | NOT formula
  142        | start_exists varDeclOptBrackets exists_sep formula end_quant
  143        | start_forall varDeclOptBrackets forall_sep formula end_quant

  144 start_exists: '(' EXISTS
  145             | EXISTS '('

  146 exists_sep: ':'
  147           | VERTICAL_BAR
  148           | SUCH_THAT

  149 start_forall: '(' FORALL
  150             | FORALL '('

  151 forall_sep: ':'

  152 end_quant: ')'

  153 expList: exp ',' expList
  154        | exp

  155 constraintChain: expList REL_OP expList
  156                | expList REL_OP constraintChain

  157 simpleExp: VAR

  158 $@7: ε

  159 simpleExp: VAR '(' $@7 argumentList ')'
  160          | '(' exp ')'

  161 argumentList: argumentList ',' VAR
  162             | VAR

  163 exp: INT
  164    | INT simpleExp
  165    | simpleExp
  166    | '-' exp
  167    | exp '+' exp
  168    | exp '-' exp
  169    | exp '*' exp

  170 reachable: REACHABLE_FROM nodeNameList nodeSpecificationList

  171 reachable_of: REACHABLE_OF VAR IN nodeNameList nodeSpecificationList

  172 nodeNameList: '(' realNodeNameList ')'

  173 realNodeNameList: realNodeNameList ',' VAR
  174                 | VAR

  175 nodeSpecificationList: OPEN_BRACE realNodeSpecificationList CLOSE_BRACE

  176 realNodeSpecificationList: realNodeSpecificationList ',' VAR ':' relation
  177                          | realNodeSpecificationList ',' VAR GOES_TO VAR ':' relation
  178                          | VAR GOES_TO VAR ':' relation
  179                          | VAR ':' relation


Symbole terminalne i reguły, w których występują

    $end (0) 0
    '(' (40) 54 59 94 140 144 145 149 150 159 160 172
    ')' (41) 54 59 94 140 152 159 160 172
    '*' (42) 61 103 128 169
    '+' (43) 60 62 167
    ',' (44) 17 28 29 37 39 40 41 42 44 45 46 49 51 52 125 132 153 161 173 176 177
    '-' (45) 25 101 166 168
    ':' (58) 17 18 28 30 119 130 131 146 151 176 177 178 179
    ';' (59) 6 7 8 9 10 11 12 13 14 15 16
    '@' (64) 71
    '[' (91) 40 41 44 48 123 136
    ']' (93) 40 41 44 48 123 136
    error (256) 6
    VAR <VAR_NAME> (258) 8 54 55 58 127 132 133 157 159 161 162 171 173 174 176 177 178 179
    INT <INT_VALUE> (259) 20 21 22 24 25 34 35 36 37 51 54 96 131 163 164
    STRING <STRING_VALUE> (260) 40 41 44 45
    OPEN_BRACE (261) 57 175
    CLOSE_BRACE (262) 57 175
    SYMBOLIC (263) 7
    OR (264) 138
    AND (265) 137
    NOT (266) 141
    ST (267)
    APPROX (268) 89
    IS_ASSIGNED (269) 8
    FORALL (270) 149 150
    EXISTS (271) 144 145
    OMEGA_DOMAIN (272) 76
    RANGE (273) 90
    DIFFERENCE (274) 74
    DIFFERENCE_TO_RELATION (275) 75
    GIST (276) 93
    GIVEN (277) 27 78 88 93
    HULL (278) 87 88
    WITHIN (279) 62
    MAXIMIZE (280) 67
    MINIMIZE (281) 68
    AFFINE_HULL (282) 84
    VENN (283) 77 78
    CONVEX_COMBINATION (284) 81
    POSITIVE_COMBINATION (285) 80
    CONVEX_HULL (286) 79
    CONIC_HULL (287) 85
    LINEAR_HULL (288) 86
    PAIRWISE_CHECK (289) 82
    CONVEX_CHECK (290) 83
    MAXIMIZE_RANGE (291) 64
    MINIMIZE_RANGE (292) 63
    MAXIMIZE_DOMAIN (293) 66
    MINIMIZE_DOMAIN (294) 65
    LEQ (295)
    GEQ (296)
    NEQ (297)
    GOES_TO (298) 114 177 178
    COMPOSE (299) 95
    JOIN (300) 97
    INVERSE (301) 91
    COMPLEMENT (302) 92
    IN (303) 171
    CARRIED_BY (304) 96
    TIME (305) 10
    TIMECLOSURE (306) 11
    UNION (307) 102
    INTERSECTION (308) 100
    VERTICAL_BAR (309) 120 147
    SUCH_THAT (310) 121 148
    SUBSET (311) 12
    ITERATIONS (312)
    SPMD (313) 15
    CODEGEN (314) 13
    DECOUPLED_FARKAS (315) 70
    FARKAS (316) 69
    TCODEGEN (317) 14
    TRANS_IS (318) 33
    SET_MMAP (319) 34
    UNROLL_IS (320) 35
    PEEL_IS (321) 36 37
    MAKE_UPPER_BOUND (322) 106
    MAKE_LOWER_BOUND (323) 107
    REL_OP <REL_OPERATOR> (324) 155 156
    RESTRICT_DOMAIN (325) 99
    RESTRICT_RANGE (326) 98
    SUPERSETOF (327) 104
    SUBSETOF (328) 105
    SAMPLE (329) 108
    SYM_SAMPLE (330) 109
    PROJECT_AWAY_SYMBOLS (331) 72
    PROJECT_ON_SYMBOLS (332) 73
    REACHABLE_FROM (333) 170
    REACHABLE_OF (334) 171
    ASSERT_UNSAT (335) 111
    PARSE_EXPRESSION (336)
    PARSE_FORMULA (337)
    PARSE_RELATION (338)
    p1 (339)
    p2 (340)
    p3 (341)
    p4 (342)
    p5 (343)
    p6 (344)
    p7 (345)
    p8 (346)
    p9 (347)
    p10 (348)


Symbole nieterminalne i reguły, w których występują

    $accept (105)
        on left: 0
    start (106)
        on left: 2
        on right: 0
    $@1 (107)
        on left: 1
        on right: 2
    inputSequence (108)
        on left: 3 5
        on right: 2 5
    $@2 (109)
        on left: 4
        on right: 5
    inputItem (110)
        on left: 6 7 8 9 10 11 12 13 14 15 16
        on right: 3 5
    relTripList <REL_TUPLE_TRIPLE> (111)
        on left: 17 18
        on right: 15 17
    blockAndProcsAndEffort (112)
        on left: 19 20 21 22
        on right: 15
    effort <INT_VALUE> (113)
        on left: 23 24 25
        on right: 13 14
    context <RELATION> (114)
        on left: 26 27
        on right: 13 14
    relPairList <REL_TUPLE_PAIR> (115)
        on left: 28 29 30 31
        on right: 13 28 29
    statementInfoResult <STM_INFO_TUPLE> (116)
        on left: 32 33 34 35 36 37
        on right: 14 33 34 35 36 37
    statementInfoList <STM_INFO_TUPLE> (117)
        on left: 38 39
        on right: 32 39
    statementInfo <STM_INFO> (118)
        on left: 40 41
        on right: 38 39
    partialwrites <MMAP> (119)
        on left: 42 43
        on right: 34 40 41 42
    partialwrite <PMMAP> (120)
        on left: 44 45
        on right: 42 43
    reads <STM_INFO> (121)
        on left: 46 47
        on right: 40 46
    oneread <READ> (122)
        on left: 48
        on right: 46 47
    partials <READ> (123)
        on left: 49 50
        on right: 48 49
    partial <PREAD> (124)
        on left: 51
        on right: 49 50
    globVarList (125)
        on left: 52 53
        on right: 7 52
    globVar (126)
        on left: 54 55
        on right: 52 53
    relation <RELATION> (127)
        on left: 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
        on right: 8 9 10 11 12 17 18 27 28 29 30 31 33 36 37 40 41 44 45 51 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 111 176 177 178 179
    $@3 (128)
        on left: 56
        on right: 57
    builtRelation <RELATION> (129)
        on left: 114 115 116
        on right: 57
    $@4 (130)
        on left: 112
        on right: 114
    $@5 (131)
        on left: 113
        on right: 114
    optionalFormula <ASTP> (132)
        on left: 117 118
        on right: 114 115
    formula_sep (133)
        on left: 119 120 121
        on right: 117
    tupleDeclaration <TUPLE_DESCRIPTOR> (134)
        on left: 123
        on right: 114 115
    $@6 (135)
        on left: 122
        on right: 123
    optionalTupleVarList (136)
        on left: 124 125 126
        on right: 123 125
    tupleVar (137)
        on left: 127 128 129 130 131
        on right: 124 125
    varList <VAR_LIST> (138)
        on left: 132 133
        on right: 132 134
    varDecl <DECLARATION_SITE> (139)
        on left: 134
        on right: 135 136
    varDeclOptBrackets <DECLARATION_SITE> (140)
        on left: 135 136
        on right: 142 143
    formula <ASTP> (141)
        on left: 137 138 139 140 141 142 143
        on right: 116 117 137 138 140 141 142 143
    start_exists (142)
        on left: 144 145
        on right: 142
    exists_sep (143)
        on left: 146 147 148
        on right: 142
    start_forall (144)
        on left: 149 150
        on right: 143
    forall_sep (145)
        on left: 151
        on right: 143
    end_quant (146)
        on left: 152
        on right: 142 143
    expList <EXP_LIST> (147)
        on left: 153 154
        on right: 153 155 156
    constraintChain <ASTCP> (148)
        on left: 155 156
        on right: 139 156
    simpleExp <EXP> (149)
        on left: 157 159 160
        on right: 164 165
    $@7 (150)
        on left: 158
        on right: 159
    argumentList <ARGUMENT_TUPLE> (151)
        on left: 161 162
        on right: 159 161
    exp <EXP> (152)
        on left: 163 164 165 166 167 168 169
        on right: 129 130 131 153 154 160 166 167 168 169
    reachable <RELATION_ARRAY_1D> (153)
        on left: 170
        on right: 16
    reachable_of <RELATION> (154)
        on left: 171
        on right: 110
    nodeNameList (155)
        on left: 172
        on right: 170 171
    realNodeNameList (156)
        on left: 173 174
        on right: 172 173
    nodeSpecificationList (157)
        on left: 175
        on right: 170 171
    realNodeSpecificationList (158)
        on left: 176 177 178 179
        on right: 175 176 177


Stan 0

    0 $accept: • start $end

    $domyślnie  redukcja przy użyciu reguły 1 ($@1)

    start  przejście do stanu 1
    $@1    przejście do stanu 2


Stan 1

    0 $accept: start • $end

    $end  przesunięcie, i przejście do stanu 3


Stan 2

    2 start: $@1 • inputSequence

    error                   przesunięcie, i przejście do stanu 4
    VAR                     przesunięcie, i przejście do stanu 5
    OPEN_BRACE              przesunięcie, i przejście do stanu 6
    SYMBOLIC                przesunięcie, i przejście do stanu 7
    APPROX                  przesunięcie, i przejście do stanu 8
    OMEGA_DOMAIN            przesunięcie, i przejście do stanu 9
    RANGE                   przesunięcie, i przejście do stanu 10
    DIFFERENCE              przesunięcie, i przejście do stanu 11
    DIFFERENCE_TO_RELATION  przesunięcie, i przejście do stanu 12
    GIST                    przesunięcie, i przejście do stanu 13
    HULL                    przesunięcie, i przejście do stanu 14
    MAXIMIZE                przesunięcie, i przejście do stanu 15
    MINIMIZE                przesunięcie, i przejście do stanu 16
    AFFINE_HULL             przesunięcie, i przejście do stanu 17
    VENN                    przesunięcie, i przejście do stanu 18
    CONVEX_COMBINATION      przesunięcie, i przejście do stanu 19
    POSITIVE_COMBINATION    przesunięcie, i przejście do stanu 20
    CONVEX_HULL             przesunięcie, i przejście do stanu 21
    CONIC_HULL              przesunięcie, i przejście do stanu 22
    LINEAR_HULL             przesunięcie, i przejście do stanu 23
    PAIRWISE_CHECK          przesunięcie, i przejście do stanu 24
    CONVEX_CHECK            przesunięcie, i przejście do stanu 25
    MAXIMIZE_RANGE          przesunięcie, i przejście do stanu 26
    MINIMIZE_RANGE          przesunięcie, i przejście do stanu 27
    MAXIMIZE_DOMAIN         przesunięcie, i przejście do stanu 28
    MINIMIZE_DOMAIN         przesunięcie, i przejście do stanu 29
    INVERSE                 przesunięcie, i przejście do stanu 30
    COMPLEMENT              przesunięcie, i przejście do stanu 31
    TIME                    przesunięcie, i przejście do stanu 32
    TIMECLOSURE             przesunięcie, i przejście do stanu 33
    SPMD                    przesunięcie, i przejście do stanu 34
    CODEGEN                 przesunięcie, i przejście do stanu 35
    DECOUPLED_FARKAS        przesunięcie, i przejście do stanu 36
    FARKAS                  przesunięcie, i przejście do stanu 37
    TCODEGEN                przesunięcie, i przejście do stanu 38
    MAKE_UPPER_BOUND        przesunięcie, i przejście do stanu 39
    MAKE_LOWER_BOUND        przesunięcie, i przejście do stanu 40
    SUPERSETOF              przesunięcie, i przejście do stanu 41
    SUBSETOF                przesunięcie, i przejście do stanu 42
    SAMPLE                  przesunięcie, i przejście do stanu 43
    SYM_SAMPLE              przesunięcie, i przejście do stanu 44
    PROJECT_AWAY_SYMBOLS    przesunięcie, i przejście do stanu 45
    PROJECT_ON_SYMBOLS      przesunięcie, i przejście do stanu 46
    REACHABLE_FROM          przesunięcie, i przejście do stanu 47
    REACHABLE_OF            przesunięcie, i przejście do stanu 48
    ASSERT_UNSAT            przesunięcie, i przejście do stanu 49
    '('                     przesunięcie, i przejście do stanu 50

    inputSequence  przejście do stanu 51
    inputItem      przejście do stanu 52
    relation       przejście do stanu 53
    reachable      przejście do stanu 54
    reachable_of   przejście do stanu 55


Stan 3

    0 $accept: start $end •

    $domyślnie  akceptowanie


Stan 4

    6 inputItem: error • ';'

    ';'  przesunięcie, i przejście do stanu 56


Stan 5

    8 inputItem: VAR • IS_ASSIGNED relation ';'
   58 relation: VAR •

    IS_ASSIGNED  przesunięcie, i przejście do stanu 57

    $domyślnie  redukcja przy użyciu reguły 58 (relation)


Stan 6

   57 relation: OPEN_BRACE • $@3 builtRelation CLOSE_BRACE

    $domyślnie  redukcja przy użyciu reguły 56 ($@3)

    $@3  przejście do stanu 58


Stan 7

    7 inputItem: SYMBOLIC • globVarList ';'

    VAR  przesunięcie, i przejście do stanu 59

    globVarList  przejście do stanu 60
    globVar      przejście do stanu 61


Stan 8

   89 relation: APPROX • relation

    VAR                     przesunięcie, i przejście do stanu 62
    OPEN_BRACE              przesunięcie, i przejście do stanu 6
    APPROX                  przesunięcie, i przejście do stanu 8
    OMEGA_DOMAIN            przesunięcie, i przejście do stanu 9
    RANGE                   przesunięcie, i przejście do stanu 10
    DIFFERENCE              przesunięcie, i przejście do stanu 11
    DIFFERENCE_TO_RELATION  przesunięcie, i przejście do stanu 12
    GIST                    przesunięcie, i przejście do stanu 13
    HULL                    przesunięcie, i przejście do stanu 14
    MAXIMIZE                przesunięcie, i przejście do stanu 15
    MINIMIZE                przesunięcie, i przejście do stanu 16
    AFFINE_HULL             przesunięcie, i przejście do stanu 17
    VENN                    przesunięcie, i przejście do stanu 18
    CONVEX_COMBINATION      przesunięcie, i przejście do stanu 19
    POSITIVE_COMBINATION    przesunięcie, i przejście do stanu 20
    CONVEX_HULL             przesunięcie, i przejście do stanu 21
    CONIC_HULL              przesunięcie, i przejście do stanu 22
    LINEAR_HULL             przesunięcie, i przejście do stanu 23
    PAIRWISE_CHECK          przesunięcie, i przejście do stanu 24
    CONVEX_CHECK            przesunięcie, i przejście do stanu 25
    MAXIMIZE_RANGE          przesunięcie, i przejście do stanu 26
    MINIMIZE_RANGE          przesunięcie, i przejście do stanu 27
    MAXIMIZE_DOMAIN         przesunięcie, i przejście do stanu 28
    MINIMIZE_DOMAIN         przesunięcie, i przejście do stanu 29
    INVERSE                 przesunięcie, i przejście do stanu 30
    COMPLEMENT              przesunięcie, i przejście do stanu 31
    DECOUPLED_FARKAS        przesunięcie, i przejście do stanu 36
    FARKAS                  przesunięcie, i przejście do stanu 37
    MAKE_UPPER_BOUND        przesunięcie, i przejście do stanu 39
    MAKE_LOWER_BOUND        przesunięcie, i przejście do stanu 40
    SUPERSETOF              przesunięcie, i przejście do stanu 41
    SUBSETOF                przesunięcie, i przejście do stanu 42
    SAMPLE                  przesunięcie, i przejście do stanu 43
    SYM_SAMPLE              przesunięcie, i przejście do stanu 44
    PROJECT_AWAY_SYMBOLS    przesunięcie, i przejście do stanu 45
    PROJECT_ON_SYMBOLS      przesunięcie, i przejście do stanu 46
    REACHABLE_OF            przesunięcie, i przejście do stanu 48
    ASSERT_UNSAT            przesunięcie, i przejście do stanu 49
    '('                     przesunięcie, i przejście do stanu 50

    relation      przejście do stanu 63
    reachable_of  przejście do stanu 55


Stan 9

   76 relation: OMEGA_DOMAIN • relation

    VAR                     przesunięcie, i przejście do stanu 62
    OPEN_BRACE              przesunięcie, i przejście do stanu 6
    APPROX                  przesunięcie, i przejście do stanu 8
    OMEGA_DOMAIN            przesunięcie, i przejście do stanu 9
    RANGE                   przesunięcie, i przejście do stanu 10
    DIFFERENCE              przesunięcie, i przejście do stanu 11
    DIFFERENCE_TO_RELATION  przesunięcie, i przejście do stanu 12
    GIST                    przesunięcie, i przejście do stanu 13
    HULL                    przesunięcie, i przejście do stanu 14
    MAXIMIZE                przesunięcie, i przejście do stanu 15
    MINIMIZE                przesunięcie, i przejście do stanu 16
    AFFINE_HULL             przesunięcie, i przejście do stanu 17
    VENN                    przesunięcie, i przejście do stanu 18
    CONVEX_COMBINATION      przesunięcie, i przejście do stanu 19
    POSITIVE_COMBINATION    przesunięcie, i przejście do stanu 20
    CONVEX_HULL             przesunięcie, i przejście do stanu 21
    CONIC_HULL              przesunięcie, i przejście do stanu 22
    LINEAR_HULL             przesunięcie, i przejście do stanu 23
    PAIRWISE_CHECK          przesunięcie, i przejście do stanu 24
    CONVEX_CHECK            przesunięcie, i przejście do stanu 25
    MAXIMIZE_RANGE          przesunięcie, i przejście do stanu 26
    MINIMIZE_RANGE          przesunięcie, i przejście do stanu 27
    MAXIMIZE_DOMAIN         przesunięcie, i przejście do stanu 28
    MINIMIZE_DOMAIN         przesunięcie, i przejście do stanu 29
    INVERSE                 przesunięcie, i przejście do stanu 30
    COMPLEMENT              przesunięcie, i przejście do stanu 31
    DECOUPLED_FARKAS        przesunięcie, i przejście do stanu 36
    FARKAS                  przesunięcie, i przejście do stanu 37
    MAKE_UPPER_BOUND        przesunięcie, i przejście do stanu 39
    MAKE_LOWER_BOUND        przesunięcie, i przejście do stanu 40
    SUPERSETOF              przesunięcie, i przejście do stanu 41
    SUBSETOF                przesunięcie, i przejście do stanu 42
    SAMPLE                  przesunięcie, i przejście do stanu 43
    SYM_SAMPLE              przesunięcie, i przejście do stanu 44
    PROJECT_AWAY_SYMBOLS    przesunięcie, i przejście do stanu 45
    PROJECT_ON_SYMBOLS      przesunięcie, i przejście do stanu 46
    REACHABLE_OF            przesunięcie, i przejście do stanu 48
    ASSERT_UNSAT            przesunięcie, i przejście do stanu 49
    '('                     przesunięcie, i przejście do stanu 50

    relation      przejście do stanu 64
    reachable_of  przejście do stanu 55


Stan 10

   90 relation: RANGE • relation

    VAR                     przesunięcie, i przejście do stanu 62
    OPEN_BRACE              przesunięcie, i przejście do stanu 6
    APPROX                  przesunięcie, i przejście do stanu 8
    OMEGA_DOMAIN            przesunięcie, i przejście do stanu 9
    RANGE                   przesunięcie, i przejście do stanu 10
    DIFFERENCE              przesunięcie, i przejście do stanu 11
    DIFFERENCE_TO_RELATION  przesunięcie, i przejście do stanu 12
    GIST                    przesunięcie, i przejście do stanu 13
    HULL                    przesunięcie, i przejście do stanu 14
    MAXIMIZE                przesunięcie, i przejście do stanu 15
    MINIMIZE                przesunięcie, i przejście do stanu 16
    AFFINE_HULL             przesunięcie, i przejście do stanu 17
    VENN                    przesunięcie, i przejście do stanu 18
    CONVEX_COMBINATION      przesunięcie, i przejście do stanu 19
    POSITIVE_COMBINATION    przesunięcie, i przejście do stanu 20
    CONVEX_HULL             przesunięcie, i przejście do stanu 21
    CONIC_HULL              przesunięcie, i przejście do stanu 22
    LINEAR_HULL             przesunięcie, i przejście do stanu 23
    PAIRWISE_CHECK          przesunięcie, i przejście do stanu 24
    CONVEX_CHECK            przesunięcie, i przejście do stanu 25
    MAXIMIZE_RANGE          przesunięcie, i przejście do stanu 26
    MINIMIZE_RANGE          przesunięcie, i przejście do stanu 27
    MAXIMIZE_DOMAIN         przesunięcie, i przejście do stanu 28
    MINIMIZE_DOMAIN         przesunięcie, i przejście do stanu 29
    INVERSE                 przesunięcie, i przejście do stanu 30
    COMPLEMENT              przesunięcie, i przejście do stanu 31
    DECOUPLED_FARKAS        przesunięcie, i przejście do stanu 36
    FARKAS                  przesunięcie, i przejście do stanu 37
    MAKE_UPPER_BOUND        przesunięcie, i przejście do stanu 39
    MAKE_LOWER_BOUND        przesunięcie, i przejście do stanu 40
    SUPERSETOF              przesunięcie, i przejście do stanu 41
    SUBSETOF                przesunięcie, i przejście do stanu 42
    SAMPLE                  przesunięcie, i przejście do stanu 43
    SYM_SAMPLE              przesunięcie, i przejście do stanu 44
    PROJECT_AWAY_SYMBOLS    przesunięcie, i przejście do stanu 45
    PROJECT_ON_SYMBOLS      przesunięcie, i przejście do stanu 46
    REACHABLE_OF            przesunięcie, i przejście do stanu 48
    ASSERT_UNSAT            przesunięcie, i przejście do stanu 49
    '('                     przesunięcie, i przejście do stanu 50

    relation      przejście do stanu 65
    reachable_of  przejście do stanu 55


Stan 11

   74 relation: DIFFERENCE • relation

    VAR                     przesunięcie, i przejście do stanu 62
    OPEN_BRACE              przesunięcie, i przejście do stanu 6
    APPROX                  przesunięcie, i przejście do stanu 8
    OMEGA_DOMAIN            przesunięcie, i przejście do stanu 9
    RANGE                   przesunięcie, i przejście do stanu 10
    DIFFERENCE              przesunięcie, i przejście do stanu 11
    DIFFERENCE_TO_RELATION  przesunięcie, i przejście do stanu 12
    GIST                    przesunięcie, i przejście do stanu 13
    HULL                    przesunięcie, i przejście do stanu 14
    MAXIMIZE                przesunięcie, i przejście do stanu 15
    MINIMIZE                przesunięcie, i przejście do stanu 16
    AFFINE_HULL             przesunięcie, i przejście do stanu 17
    VENN                    przesunięcie, i przejście do stanu 18
    CONVEX_COMBINATION      przesunięcie, i przejście do stanu 19
    POSITIVE_COMBINATION    przesunięcie, i przejście do stanu 20
    CONVEX_HULL             przesunięcie, i przejście do stanu 21
    CONIC_HULL              przesunięcie, i przejście do stanu 22
    LINEAR_HULL             przesunięcie, i przejście do stanu 23
    PAIRWISE_CHECK          przesunięcie, i przejście do stanu 24
    CONVEX_CHECK            przesunięcie, i przejście do stanu 25
    MAXIMIZE_RANGE          przesunięcie, i przejście do stanu 26
    MINIMIZE_RANGE          przesunięcie, i przejście do stanu 27
    MAXIMIZE_DOMAIN         przesunięcie, i przejście do stanu 28
    MINIMIZE_DOMAIN         przesunięcie, i przejście do stanu 29
    INVERSE                 przesunięcie, i przejście do stanu 30
    COMPLEMENT              przesunięcie, i przejście do stanu 31
    DECOUPLED_FARKAS        przesunięcie, i przejście do stanu 36
    FARKAS                  przesunięcie, i przejście do stanu 37
    MAKE_UPPER_BOUND        przesunięcie, i przejście do stanu 39
    MAKE_LOWER_BOUND        przesunięcie, i przejście do stanu 40
    SUPERSETOF              przesunięcie, i przejście do stanu 41
    SUBSETOF                przesunięcie, i przejście do stanu 42
    SAMPLE                  przesunięcie, i przejście do stanu 43
    SYM_SAMPLE              przesunięcie, i przejście do stanu 44
    PROJECT_AWAY_SYMBOLS    przesunięcie, i przejście do stanu 45
    PROJECT_ON_SYMBOLS      przesunięcie, i przejście do stanu 46
    REACHABLE_OF            przesunięcie, i przejście do stanu 48
    ASSERT_UNSAT            przesunięcie, i przejście do stanu 49
    '('                     przesunięcie, i przejście do stanu 50

    relation      przejście do stanu 66
    reachable_of  przejście do stanu 55


Stan 12

   75 relation: DIFFERENCE_TO_RELATION • relation

    VAR                     przesunięcie, i przejście do stanu 62
    OPEN_BRACE              przesunięcie, i przejście do stanu 6
    APPROX                  przesunięcie, i przejście do stanu 8
    OMEGA_DOMAIN            przesunięcie, i przejście do stanu 9
    RANGE                   przesunięcie, i przejście do stanu 10
    DIFFERENCE              przesunięcie, i przejście do stanu 11
    DIFFERENCE_TO_RELATION  przesunięcie, i przejście do stanu 12
    GIST                    przesunięcie, i przejście do stanu 13
    HULL                    przesunięcie, i przejście do stanu 14
    MAXIMIZE                przesunięcie, i przejście do stanu 15
    MINIMIZE                przesunięcie, i przejście do stanu 16
    AFFINE_HULL             przesunięcie, i przejście do stanu 17
    VENN                    przesunięcie, i przejście do stanu 18
    CONVEX_COMBINATION      przesunięcie, i przejście do stanu 19
    POSITIVE_COMBINATION    przesunięcie, i przejście do stanu 20
    CONVEX_HULL             przesunięcie, i przejście do stanu 21
    CONIC_HULL              przesunięcie, i przejście do stanu 22
    LINEAR_HULL             przesunięcie, i przejście do stanu 23
    PAIRWISE_CHECK          przesunięcie, i przejście do stanu 24
    CONVEX_CHECK            przesunięcie, i przejście do stanu 25
    MAXIMIZE_RANGE          przesunięcie, i przejście do stanu 26
    MINIMIZE_RANGE          przesunięcie, i przejście do stanu 27
    MAXIMIZE_DOMAIN         przesunięcie, i przejście do stanu 28
    MINIMIZE_DOMAIN         przesunięcie, i przejście do stanu 29
    INVERSE                 przesunięcie, i przejście do stanu 30
    COMPLEMENT              przesunięcie, i przejście do stanu 31
    DECOUPLED_FARKAS        przesunięcie, i przejście do stanu 36
    FARKAS                  przesunięcie, i przejście do stanu 37
    MAKE_UPPER_BOUND        przesunięcie, i przejście do stanu 39
    MAKE_LOWER_BOUND        przesunięcie, i przejście do stanu 40
    SUPERSETOF              przesunięcie, i przejście do stanu 41
    SUBSETOF                przesunięcie, i przejście do stanu 42
    SAMPLE                  przesunięcie, i przejście do stanu 43
    SYM_SAMPLE              przesunięcie, i przejście do stanu 44
    PROJECT_AWAY_SYMBOLS    przesunięcie, i przejście do stanu 45
    PROJECT_ON_SYMBOLS      przesunięcie, i przejście do stanu 46
    REACHABLE_OF            przesunięcie, i przejście do stanu 48
    ASSERT_UNSAT            przesunięcie, i przejście do stanu 49
    '('                     przesunięcie, i przejście do stanu 50
